style: header nav gets bottom padding to prevent layout shift

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -58,8 +58,8 @@ nav {
             }
 
             &:hover {
+                margin-bottom: 0.2rem;
                 border-bottom: 0.1rem solid var(--color-text-primary);
-                padding-bottom: 0.3rem;
             }
         }
 
